feat(ats): implement production-quality hybrid ATS analysis system with deterministic scoring, normalized skill taxonomy, and job match engine